--- a/Clase25/Metodos de extension/Entidades.Alumnos/Entidades.Alumnos.csproj
+++ b/Clase25/Metodos de extension/Entidades.Alumnos/Entidades.Alumnos.csproj
@@ -30,6 +30,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Entidades.Externa">
+      <HintPath>..\Entidades.Externa.dll</HintPath>
+    </Reference>
+    <Reference Include="Entidades.Externa.Sellada">
+      <HintPath>..\Entidades.Externa.Sellada.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enumerados.cs" />
+    <Compile Include="Extensora.cs" />
     <Compile Include="Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
